# final_project

./: .env  Dockerfile  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 5dd9bee9f743_add_status_to_project.py  db0d0496c45f_update_user_project_relations_with_.py  ea9d7afd4896_add_ondelete_cascade_to_user_project.py  ef26d9a12388_initial_migration.py
app/: auth.py  config.py  database.py  dependencies.py  main.py  web.py
app/models/: __init__.py  action_log.py  comment.py  project.py  task.py  user.py  user_project.py
app/routes/: auth.py  comment.py  project.py  task.py  team.py
app/schemas/: comment.py  project.py  task.py  user_project.py
app/templates/: create_project.html  edit_project.html  edit_task.html  login.html  project_detail.html  projects.html  register.html  welcome.html
